--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 # 账号名
-PICA_ACCOUNT=
+PICA_ACCOUNT=zy789
 # 账号密码
-PICA_PASSWORD=
+PICA_PASSWORD=78945696909861
 # 代理地址，示例：http://127.0.0.1:7890
 PICA_PROXY=
 # 下载图片的并发数
